hard-gists/2416148/run.log
=== Docker Run Log for 2416148 ===
Started at: Mi 29. Okt 13:03:50 CET 2025

[2025-10-29 13:03:51] START: Running container for 2416148
[2025-10-29 13:03:51] SUCCESS: Container 41953d17acb80d325057db9121579f7274a38ab7942e91ada636fc414127f3f9 started for 2416148
=== Container logs for 2416148 ===
  File "/snippet.py", line 204
    print 'created', model
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2416148 ===
[2025-10-29 13:03:53] INFO: Container 41953d17acb80d325057db9121579f7274a38ab7942e91ada636fc414127f3f9 has stopped
